tests/baselines/reference/exportAssignmentOfDeclaredExternalModule.errors.txt
tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_1.ts(3,13): error TS2691: Cannot find name 'Sammy'. A type exists with this name, but no value.
tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_1.ts(4,9): error TS2691: Cannot find name 'Sammy'. A type exists with this name, but no value.


==== tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_1.ts (2 errors) ====
    ///<reference path='exportAssignmentOfDeclaredExternalModule_0.ts'/>
    import Sammy = require('./exportAssignmentOfDeclaredExternalModule_0');
    var x = new Sammy(); // error to use as constructor as there is not constructor symbol
                ~~~~~
!!! error TS2691: Cannot find name 'Sammy'. A type exists with this name, but no value.
    var y = Sammy(); // error to use interface name as call target
            ~~~~~
!!! error TS2691: Cannot find name 'Sammy'. A type exists with this name, but no value.
    var z: Sammy; // no error - z is of type interface Sammy from module 'M'
    var a = new z(); // constructor - no error
    var b = z(); // call signature - no error
==== tests/cases/compiler/exportAssignmentOfDeclaredExternalModule_0.ts (0 errors) ====
    interface Sammy {
        new (): any; // a constructor signature
            (): number; // a 0 arg call signature
        }
    export = Sammy;
    